# DeformationTransfer

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
resources/: correspondence-cat-lion.txt  correspondence-horse-camel.txt  marker-cat-lion.txt  marker-horse-camel.txt  test.frag  test.vert
